Removing dev boxes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spectre Divide</title>
 
-    <link rel="stylesheet" href="styles/default-styles.css">
+    <link rel="stylesheet" href="styles/tempindexcss.css">
 </head>
 <body>
     <h1>                
