--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <img src="assets/misc/SDGS1Logo.png" width="1024" height="224" alt="Spectre Divide Geoguessr" id="logo-image" >
     </h1>
     <div>
-        <p>Only works at fullscreen. Mobile isnt supported yet. Both will be done soon.</p>
+        <p>Only works at fullscreen. Mobile isnt supported yet. The CSS for that is being worked on</p>
         <p>Welcome to Spectre Divide Geoguessr!</p>
-        <p>This is a work in progress so feel free to leave any feedback in <a href="https://spectre.antiparty.dev/">#🎨｜fan-art</a></p>
+        <p>This is a work in progress so feel free to leave any feedback in <a href="https://discord.com/channels/943308533439545415/1343990218096906311">#🎨｜fan-art</a></p>
         <p>\/ Click on lofi-primal to start \/</p>
         <div>
             <a href="game.html">
