--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <h1>                
         <img src="assets/misc/SDGS1Logo.png" width="1024" height="224" alt="Spectre Divide Geoguessr" id="logo-image" >
     </h1>
-    <div>
-        <p>Only works at fullscreen. Mobile isnt supported yet. The CSS for that is being worked on</p>
-        <p>Welcome to Spectre Divide Geoguessr!</p>
-        <p>This is a work in progress so feel free to leave any feedback in <a href="https://discord.com/channels/943308533439545415/1343990218096906311">#🎨｜fan-art</a></p>
-        <p>\/ Click on lofi-primal to start \/</p>
+    
+    <div class="welcome-container">
+        <p class="welcome-text">Only works at fullscreen. Mobile isn't supported yet. The CSS for that is being worked on</p>
+        <p class="welcome-text">Welcome to Spectre Divide Geoguessr!</p>
+        <p class="welcome-text">This is a work in progress so feel free to leave any feedback in <a class="discord-link" href="https://discord.com/channels/943308533439545415/1343990218096906311">#🎨｜fan-art</a></p>
+        
         <div>
-            <a href="game.html">
             <img src="assets/misc/lofiprimal.png" width="720" height="720" alt="lofiprimal" id="startup-image">
+            <div>
+                <a href="game.html" class="play-btn">Play Now</a>
+            </div>
         </div>
     </div>
 </body>
