--- a/game.html
+++ b/game.html
@@ -16,41 +16,48 @@
     </h1>
 
     <div class="quiz">
-
-        <!-- informative text -->
+        <!-- Game status display -->
+        <div id="result">Where is this image?</div>
+        <div id="map-name">&nbsp;</div>
         
-        <p id="map-name">&nbsp;</p>
-        <p> <!-- continue confirmation buttons -->
+        <!-- continue confirmation buttons -->
+        <div class="confirm-buttons">
             <button class="btn confirm-btn" id="btn-yes">Yes</button>
             <button class="btn confirm-btn" id="btn-no">No</button> 
-        </p>
-        <p id="result">Where is this image?</p>
+        </div>
         
-        <div class="quiz-container">
-
-            <!-- utility buttons -->
-            <div class="utilities">
-                <button class="btn utility-btn" id="btn-submit">Submit</button>
-                <button class="btn utility-btn" id="btn-continue">Continue</button>
+        <!-- Main game layout -->
+        <div class="game-container">
+            <!-- Left side utility buttons -->
+            <div class="left-controls">
                 <button class="btn utility-btn map-btn" id="btn-map">Get Map</button>
                 <button class="btn utility-btn" id="btn-answer">Get Answer</button>
                 <button class="btn utility-btn" id="btn-clear">Clear Map</button>
             </div>
 
-            <!-- geoguessr image, minimap overlay, and placable dot -->
-            <div class="quiz-image">
-                <img width="720" height="720" alt="image to be guessed" class="image" id="geo-image">
-                <img width="720" height="720" class="image" id="clickable-image"> 
-                <img src="assets/misc/Basic_red_dot.png" width="10" height="10" alt="☺" id="dot">
+            <!-- Center content: image and map buttons below -->
+            <div class="center-content">
+                <!-- Main game image -->
+                <div class="quiz-image">
+                    <img width="720" height="720" alt="image to be guessed" class="image" id="geo-image">
+                    <img width="720" height="720" class="image" id="clickable-image"> 
+                    <img src="assets/misc/Basic_red_dot.png" width="10" height="10" alt="☺" id="dot">
+                </div>
+
+                <!-- Maps selection (horizontal, below the image) -->
+                <div class="maps">
+                    <button class="btn map-btn" id="btn-mill">Mill</button>
+                    <button class="btn map-btn" id="btn-metro">Metro</button>
+                    <button class="btn map-btn" id="btn-skyway">Skyway</button>
+                    <button class="btn map-btn" id="btn-commons">Commons</button>
+                    <button class="btn map-btn" id="btn-canal">Canal</button>
+                </div>
             </div>
 
-            <!-- map buttons -->
-            <div class="maps">
-                <button class="btn map-btn" id="btn-mill">Mill</button>
-                <button class="btn map-btn" id="btn-metro">Metro</button>
-                <button class="btn map-btn" id="btn-skyway">Skyway</button>
-                <button class="btn map-btn" id="btn-commons">Commons</button>
-                <button class="btn map-btn" id="btn-canal">Canal</button>
+            <!-- Right side utility buttons -->
+            <div class="right-controls">
+                <button class="btn utility-btn" id="btn-submit">Submit</button>
+                <button class="btn utility-btn" id="btn-continue">Continue</button>
             </div>
         </div>
     </div>
