--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spectre Divide</title>
-
+    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/din-condensed">
     <link rel="stylesheet" href="styles/default-styles.css">
 </head>
 <body>
     <h1>                
-        <img src="assets/misc/SDGS1Logo.png" width="1024" height="224" alt="Spectre Divide Geoguessr" id="logo-image" >
+        <img src="assets/misc/SDGS1Logo.png" width="1024" height="224" alt="Spectre Divide Geoguessr" id="logo-image">
     </h1>
     
     <div class="welcome-container">
@@ -19,7 +19,7 @@
         
         <div>
             <img src="assets/misc/lofiprimal.png" width="720" height="720" alt="lofiprimal" id="startup-image">
-            <div>
+            <div style="text-align: center;">
                 <a href="game.html" class="play-btn">Play Now</a>
             </div>
         </div>
