--- a/game.html
+++ b/game.html
@@ -17,8 +17,8 @@
     </h1>
 
     <div class="quiz">
-        <div id="result">Where is this image?</div>
         <div id="map-name">&nbsp;</div>
+        <div id="result">Where is this image?</div>
         
         <div class="game-layout">
             <div class="center-content">
@@ -61,7 +61,7 @@
                     <div class="top-right-controls">
                         <button class="btn skip-btn" id="btn-continue">
                             <span class="skip-icon"><i class="fa-solid fa-forward"></i></span>
-                            <span class="skip-text">SKIP</span>
+                            <span class="skip-text">NEXT</span>
                         </button>
                         
                         <!-- Submit button moved below skip -->
