--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Spectre Divide</title>
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/din-condensed">
   <link rel="stylesheet" href="styles/default-styles.css">
+  <link rel="stylesheet" href="styles/S0_style.css">
 </head>
 <body class="index-body">
   <header>
