--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
     <!-- Theme switcher script (loads theme CSS dynamically) -->
     <script src="js/theme-switcher.js"></script>
     <script type="text/javascript" src="data/data.json"></script>
-    <script src="src/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
 </head>
 <body>
     <h1>                
