--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
     <!-- Base layout styles -->
     <link rel="stylesheet" href="styles/default-styles.css">
     <!-- Theme switcher script (loads theme CSS dynamically) -->
+    <link rel="stylesheet" href="styles/mobile.css">
     <script src="js/theme-switcher.js"></script>
     <script type="text/javascript" src="data/data.json"></script>
     <script src="js/main.js" type="module"></script>
