--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/din-condensed">
   <link rel="stylesheet" href="styles/default-styles.css">
   <link rel="stylesheet" href="styles/S0_style.css">
+  <link rel="stylesheet" href="styles/mobile.css">
 </head>
 <body class="index-body">
   <header>
