--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
     <script src="js/theme-switcher.js"></script>
     <script type="text/javascript" src="data/data.json"></script>
     <script src="js/main.js" type="module"></script>
+    <script src="js/mobile-buttons.js"></script>
 </head>
 <body>
     <h1>                
