Click button tip

--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
         <div class="play-overlay">PLAY</div>
       </a>
     </div>
+
+    <div class="notice">
+      <p>click the picture to play</p>
+    </div>
+    
   </main>
   
   <footer>
     &copy; 2025 Spectre Divide Geoguessr - Fan Project
   </footer>
+  <!-- <script src="js/url-rewriter.js"></script> -->
 </body>
 </html>
