refactored to have multiple js files for readability and scalability added some helper functions for common repeating code

--- a/game.html
+++ b/game.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="styles/default-styles.css">
     <!-- Theme switcher script (loads theme CSS dynamically) -->
     <link rel="stylesheet" href="styles/mobile.css">
-    <script src="js/theme-switcher.js"></script>
+    <script src="src/theme-switcher.js"></script>
+    <script src="src/main.js" type="module"></script>
+    <!-- JSON data file -->
     <script type="text/javascript" src="data/data.json"></script>
-    <script src="js/main.js" type="module"></script>
-    <script src="js/mobile-buttons.js"></script>
+    <script src="src/main.js" type="module"></script>
+    <script src="src/mobile-buttons.js"></script>
 </head>
 <body>
     <h1>                
