--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spectre Divide</title>
+  <!-- Fonts and Styles -->
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/din-condensed">
   <link rel="stylesheet" href="styles/default-styles.css">
   <link rel="stylesheet" href="styles/S0_style.css">
   <link rel="stylesheet" href="styles/mobile.css">
+  <script src="js/theme-switcher.js"></script>
 </head>
 <body class="index-body">
   <header>
@@ -15,6 +17,7 @@
   </header>
   
   <main>
+    <!-- Welcome message -->
     <div class="welcome-container">
       <h2 class="welcome-header">Welcome to Spectre Divide Geoguessr!</h2>
       
@@ -23,6 +26,7 @@
       <p class="welcome-text">This is a work in progress so feel free to leave any feedback in <br> <a class="discord-link" href="https://discord.com/channels/943308533439545415/1343990218096906311">#🎨｜fan-art</a></p>
     </div>
     
+    <!-- Game entry point -->
     <div class="content-container">
       <a href="game.html" class="play-container">
         <img src="assets/misc/lofiprimal.png" width="720" height="720" alt="lofiprimal" id="startup-image">
@@ -39,6 +43,5 @@
   <footer>
     &copy; 2025 Spectre Divide Geoguessr - Fan Project
   </footer>
-  <!-- <script src="js/url-rewriter.js"></script> -->
 </body>
 </html>
