--- a/src/app.html
+++ b/src/app.html
@@ -3,13 +3,25 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/png" href="/src/lib/assets/favicon/favicon-96x96.png" sizes="96x96" />
-		<link rel="icon" type="image/svg+xml" href="/src/lib/assets/favicon/favicon.svg" />
-		<link rel="shortcut icon" href="/src/lib/assets/favicon/favicon.ico" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/src/lib/assets/favicon/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+		<link rel="shortcut icon" href="/favicon/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-title" content="Geoguessr" />
-		<link rel="manifest" href="/src/lib/assets/favicon/site.webmanifest" />
+		<link rel="manifest" href="/favicon/site.webmanifest" />
 		
+		<!-- Open Graph / Rich Embed Data -->
+		<meta property="og:title" content="Spectre Geo-Guesser" />
+		<meta property="og:description" content="Test your map knowledge! Can you guess the correct spot?" />
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="/assets/Minimaps/Skyway_Minimap_Overlay.png" />
+		<meta property="og:site_name" content="Spectre Geo-Guesser" />
+		
+		<!-- Twitter / X Card Data -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Spectre Geo-Guesser" />
+		<meta name="twitter:description" content="Test your map knowledge! Can you guess the correct spot?" />
+		<meta name="twitter:image" content="/assets/Minimaps/Skyway_Minimap_Overlay.png" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
