--- a/src/app.html
+++ b/src/app.html
@@ -11,15 +11,15 @@
 		<link rel="manifest" href="/favicon/site.webmanifest" />
 		
 		<!-- Open Graph / Rich Embed Data -->
-		<meta property="og:title" content="Spectre Geo-Guesser" />
+		<meta property="og:title" content="Spectre Geoguessr" />
 		<meta property="og:description" content="Test your map knowledge! Can you guess the correct spot?" />
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="/assets/Minimaps/Skyway_Minimap_Overlay.png" />
-		<meta property="og:site_name" content="Spectre Geo-Guesser" />
+		<meta property="og:site_name" content="Spectre Geoguessr" />
 		
 		<!-- Twitter / X Card Data -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:title" content="Spectre Geo-Guesser" />
+		<meta name="twitter:title" content="Spectre Geoguessr" />
 		<meta name="twitter:description" content="Test your map knowledge! Can you guess the correct spot?" />
 		<meta name="twitter:image" content="/assets/Minimaps/Skyway_Minimap_Overlay.png" />
 		%sveltekit.head%
